# autoresearch

./: .gitignore  README.md
kaggle/: AGENTS.md  CLAUDE.md  deadline.py
kaggle/chocolate-sales/: kernel-metadata.json  notebook.ipynb  notebook_executed.ipynb  prepare.py  pyproject.toml  train.py
kaggle/financial-fraud/: kernel-metadata.json  notebook.ipynb  notebook_executed.ipynb  prepare.py  pyproject.toml  train.py
kaggle/florida-real-estate/: kernel-metadata.json  notebook.ipynb  notebook_executed.ipynb  prepare.py  pyproject.toml  train.py
kaggle/job-salary-prediction/: kernel-metadata.json  notebook.ipynb  notebook_executed.ipynb  prepare.py  pyproject.toml  train.py
kaggle/student-mental-health/: kernel-metadata.json  notebook.ipynb  notebook_executed.ipynb  prepare.py  pyproject.toml  train.py
kaggle/template/: kernel-metadata.template.json  notebook_template.ipynb
